--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+
+<div id='kanban-board'></div>
+<%= javascript_pack_tag 'components/Kanban/KanbanBoard' %>
