--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,31 +1,34 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Projects</h1>
+<div class="card">
+  <div class="card-body">
+    <h2 class="card-title">Projects</h2>
+    <table class="table table-sm">
+      <thead class="text-white bg-primary">
+        <tr>
+          <th>Name</th>
+          <th>Type</th>
+          <th>Code</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Type</th>
-      <th>Code</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <tbody>
+        <% @projects.each do |project| %>
+          <tr>
+            <td><%= project.name %></td>
+            <td><%= project.type %></td>
+            <td><%= project.code %></td>
+            <td><%= link_to 'Show', project, class: "btn btn-primary btn-sm" %></td>
+            <td><%= link_to 'Edit', edit_project_path(project), class: "btn btn-primary btn-sm" %></td>
+            <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.name %></td>
-        <td><%= project.type %></td>
-        <td><%= project.code %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <br>
 
-<br>
-
-<%= link_to 'New Project', new_project_path %>
+    <%= link_to 'New Project', new_project_path, class: "btn btn-primary card-link" %>
+  </div>
+</div>
