--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,6 @@
-<div id="kanban-board"></div>
+<div>
+  <h1>Kanban</h1>
+  <div id="kanban-board"></div>
+</div>
+
 <%= javascript_pack_tag 'components/KanbanBoard/KanbanBoard' %>
